비밀번호 변경기능 수정완료

--- a/frontend/page/mypage/personal/style.css
+++ b/frontend/page/mypage/personal/style.css
@@ -167,7 +167,7 @@ body {
 
 /* 확인 버튼 색상 */
 .confirm {
-    background-color: #f44336; /* 확인 버튼 색상 */
+    background-color: #33CCCC; /* 확인 버튼 색상 */
     color: white;
 }
 
