--- a/frontend/page/assets/css/main_delete04.css
+++ b/frontend/page/assets/css/main_delete04.css
@@ -676,6 +676,13 @@ input, select, textarea {
 
 	/* 모바일 스타일 */
 	@media (max-width: 768px) {
+		#wrapper {
+			display: flex;
+			flex-direction: column; /* 세로로 정렬 */
+			width: 100%;
+			height: 100vh; /* 화면 전체 높이 */
+		}
+
 		#main {
 			flex: 1; /* 남은 공간 전부 차지 */
 			position: relative;
@@ -684,21 +691,14 @@ input, select, textarea {
 			justify-content: flex-start;
 			height: 100vh;
 			min-height: 0;
-			margin-top: 15px;
 		}
 
-		#main .inner {
-			display: flex;
-			height : 100vh;
-			min-height: 0;
-		}
-
-		#main .map-section {
+		.map-section {
 			width: 100%;
 			height: 100%; /* 부모 요소(#main)의 크기 */
 			position: relative;
 			overflow: hidden;
-			margin-bottom: 0px;
+			margin-top: 15px;
 		}
 
 		#map {
