--- a/frontend/page/assets/css/main.css
+++ b/frontend/page/assets/css/main.css
@@ -353,7 +353,7 @@ input, select, textarea {
 		border-radius: 4px;
 		border: 0;
 		/* box-shadow: inset 0 0 0 2px #585858; */
-		color: #585858 !important;
+		/* color: #585858 !important; */
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
