front main, form, css 수정

--- a/frontend/page/assets/css/main.css
+++ b/frontend/page/assets/css/main.css
@@ -429,6 +429,39 @@ input, select, textarea {
 			height: 32px; /* 아이콘 높이 설정 */
 			
 		}
+		/* 드롭다운 메뉴 */
+		.search_class {
+			display: flex; /* Flexbox 사용 */
+			flex-direction: column; /* 세로 정렬 */
+			align-items: center; /* 왼쪽 정렬 */
+			gap: 0px; /* label과 select 사이 간격 */
+			margin: 0px auto; /* 전체 여백 */
+		}
+		
+		.search_class label {
+			font-size: 16px; /* 글꼴 크기 */
+			color: #333; /* 텍스트 색상 */
+			/* font-weight: bold; 강조 */
+			margin: 0px
+		}
+		
+		.search_class select {
+			outline: none; /* 선택 시 외곽선 제거 */
+			padding: 6px 10px; /* 내부 여백 설정 */
+			border: 2px solid #33cbca; /* 얇은 테두리 추가 */
+			border-radius: 4px; /* 둥근 모서리 */
+			background-color: #fff; /* 흰색 배경 */
+			font-size: 16px; /* 글꼴 크기 */
+			font-weight: bold;
+			color: #333; /* 텍스트 색상 */
+			cursor: pointer; /* 포인터 변경 */
+			transition: border-color 0.3s ease; /* 호버 애니메이션 */
+		}
+		
+		.search_class select:hover {
+			border-color: #007BFF; /* 호버 시 테두리 색상 변경 */
+		}
+		
 
 			#header .inner {
 				width: 100%;
