--- a/frontend/page/membership/enterprise/style.css
+++ b/frontend/page/membership/enterprise/style.css
@@ -2186,8 +2186,8 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-bottom-color: #f2849e;
-			box-shadow: inset 0 -1px 0 0 #f2849e;
+			border-bottom-color: #33CCCC;
+			box-shadow: inset 0 -1px 0 0 #33CCCC;
 		}
 
 	select {
@@ -2302,6 +2302,39 @@ input, select, textarea {
 	input[type="radio"] + label:before {
 		border-radius: 100%;
 	}
+
+	/* 중복검사 버튼 스타일 */
+	.btn-check {
+		font-size: 10px;
+		background-color: #cfd7d7;
+		color: rgb(102, 102, 102);
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+		
+		
+	}
+
+	.btn-check:hover {
+		background-color: #a6dede; /* hover 시 색상 */
+	}
+
+	/* 중복검사 버튼 스타일 */
+	.num_btn-check {
+		font-size: 10px;
+		background-color: #cfd7d7;
+		color: rgb(102, 102, 102);
+		border-radius: 5px;
+		cursor: pointer;
+		padding: 3px; /* 버튼 내부 여백 */
+		
+		
+	}
+
+	.num_btn-check:hover {
+		background-color: #a6dede; /* hover 시 색상 */
+	}
+		
 
 /* Box */
 
@@ -2888,6 +2921,23 @@ body {
         border-color: #33CCCC;  /* 청록색으로 포커스 시 테두리 색 변경 */
         box-shadow: 0 0 5px rgba(51, 204, 204, 0.5);  /* 청록색 그림자 추가 */
     }
+
+	/* 유효성 검증 성공: 초록색 */
+	.form-control.valid:focus {
+		border-bottom-color: #33CCCC; 
+		box-shadow: inset 0 -1px 0 0 #33CCCC; 
+		border: 1px solid #33CCCC;
+	}
+
+	/* 유효성 검증 실패: 빨간색 */
+	.form-control.invalid:focus {
+		border-bottom-color: #ff3333; 
+		box-shadow: inset 0 -1px 0 0 #ff3333;
+		border: 1px solid #ff3333;
+		
+	}
+
+
     .phone-container {
         display: flex;
     }
@@ -3046,7 +3096,7 @@ body {
 
 /* 전화번호 입력 필드 */
 .phone-input {
-    width: 29%;
+    width: 25%;
     padding: 12px;
     font-size: 16px;
     border: 1px solid #ced4da;
@@ -3060,6 +3110,11 @@ body {
     font-size: 18px;
     color: #333;
     margin: 0 5px;
+}
+
+.phone-input::placeholder {
+    color: gray; /* placeholder 텍스트 색상 */
+    opacity: 0.8; /* 투명도 설정 (선택 사항) */
 }
 
 /* 화면이 600px 이하일 때 로고 크기 조정 */
