--- a/frontend/page/assets/css/login.css
+++ b/frontend/page/assets/css/login.css
@@ -247,6 +247,9 @@ form {
   /* 호버 시 확대 효과 */
   border: none;
 
+
+  
+
   /* 테두리 제거 */
   &.kakao__btn {
     background: #FEE500;
@@ -276,7 +279,7 @@ form {
     /* 아이콘 이미지를 배경으로 설정 */
     background-image: url('../../images/naver-logo.png');
     /* 아이콘 파일 경로 */
-    background-size: 80%;
+    background-size: 50%;
     /* 배경 크기 */
     background-repeat: no-repeat;
     /* 배경 반복 제거 */
@@ -287,6 +290,10 @@ form {
       box-shadow: 0 0 0 rgba(#25282d, .0);
     }
   }
+}
+#NaverLoginBtn{
+  border: none;
+  background-color: transparent;
 }
 
 footer {
