--- a/frontend/page/assets/css/party.css
+++ b/frontend/page/assets/css/party.css
@@ -3305,6 +3305,7 @@ option {
 }
 .item-container {
 	display: grid;
+	width: 100%;
 	grid-template-columns: repeat(3, 1fr);
 	margin-top: 1%;
 	/* flex-wrap: wrap; */
@@ -3312,11 +3313,12 @@ option {
 	justify-content: center;
 	justify-items: center;
 	margin-bottom: auto;
+	border: 1px solid red;
 }
 
 /* 이미지 크기 맞추기 */
 .item-container .image-container img {
-    width: 100%;       /* 이미지가 컨테이너의 너비에 맞게 크기 조정 */
+    width: 100%;      
     height: 15rem;     /* 고정된 높이 설정 */
     object-fit: cover; /* 이미지를 자르지 않고 비율을 유지하면서 채우기 */
     border-radius: 8px; /* 선택 사항: 이미지에 둥근 모서리 추가 */
