--- a/frontend/page/membership/personal/style.css
+++ b/frontend/page/membership/personal/style.css
@@ -2143,52 +2143,9 @@ input, select, textarea {
 
 		}
 
-	label {
-		display: block;
-		font-size: 0.9em;
-		font-weight: 900;
-		margin: 0 0 1em 0;
-	}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
-	select,
-	textarea {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
-		background-color: transparent;
-		border: none;
-		border-radius: 0;
-		border-bottom: solid 1px #c9c9c9;
-		color: inherit;
-		display: block;
-		outline: 0;
-		padding: 0;
-		text-decoration: none;
-	}
 
-		input[type="text"]:invalid,
-		input[type="password"]:invalid,
-		input[type="email"]:invalid,
-		input[type="tel"]:invalid,
-		select:invalid,
-		textarea:invalid {
-			box-shadow: none;
-		}
 
-		input[type="text"]:focus,
-		input[type="password"]:focus,
-		input[type="email"]:focus,
-		input[type="tel"]:focus,
-		select:focus,
-		textarea:focus {
-			border-bottom-color: #f2849e;
-			box-shadow: inset 0 -1px 0 0 #f2849e;
-		}
 
 	select {
 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23c9c9c9' /%3E%3C/svg%3E");
@@ -2885,9 +2842,42 @@ body {
 
     .form-control:focus {
         outline: none;
-        border-color: #33CCCC;  /* 청록색으로 포커스 시 테두리 색 변경 */
-        box-shadow: 0 0 5px rgba(51, 204, 204, 0.5);  /* 청록색 그림자 추가 */
+        border-color: #33CCCC; 
+        box-shadow: 0 0 5px 33CCCC(255, 255, 255, 0.5);
+		border: 1px solid #33CCCC;
     }
+
+	/* 유효성 검증 성공: 초록색 */
+	.form-control.valid:focus {
+		border-bottom-color: #33CCCC; 
+		box-shadow: inset 0 -1px 0 0 #33CCCC; 
+		border: 1px solid #33CCCC;
+	}
+
+	/* 유효성 검증 실패: 빨간색 */
+	.form-control.invalid:focus {
+		border-bottom-color: #ff3333; 
+		box-shadow: inset 0 -1px 0 0 #ff3333;
+		border: 1px solid #ff3333;
+		
+	}
+
+		/* 중복검사 버튼 스타일 */
+	.btn-check {
+		font-size: 10px;
+		background-color: #cfd7d7;
+		color: rgb(102, 102, 102);
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+		
+		
+	}
+
+	.btn-check:hover {
+		background-color: #a6dede; /* hover 시 색상 */
+	}
+
 
     /* 버튼 스타일 */
     .btn-primary {
@@ -2923,6 +2913,36 @@ body {
         color: #29b8b8;  /* 링크 hover 시 어두운 청록색 */
         text-decoration: underline;
     }
+
+
+	label {
+		display: block;
+		font-size: 0.9em;
+		font-weight: 900;
+		margin: 0 0 1em 0;
+	}
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	select,
+	textarea {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		background-color: transparent;
+		border: none;
+		border-radius: 0;
+		border-bottom: solid 1px #c9c9c9;
+		color: inherit;
+		display: block;
+		outline: 0;
+		padding: 0;
+		text-decoration: none;
+	}
+	
 
     /* 여백 추가 */
     .mt-3 {
@@ -3042,3 +3062,5 @@ body {
             font-weight: bold; /* 글씨를 더 굵게 할 수 있음 */
         }
     }
+
+
