--- a/frontend/page/assets/css/enterprise_mypage.css
+++ b/frontend/page/assets/css/enterprise_mypage.css
@@ -345,7 +345,7 @@ body {
 .navi {
     background-color: #33cbca; /* 배경색 */
     padding: 6px 0;
-    margin-top: 105px; /* 상단 여백 제거 */
+    margin-top: 103px; /* 상단 여백 제거 */
     box-sizing: border-box;
 }
 
@@ -374,6 +374,7 @@ body {
     display: flex;
     align-items: center;
     font-weight: 300;
+    font-size: 1.2em;
 }
 
 .navbar ul li a img {
